ingress/cert/ingress.yaml
---
# Create ingress for react-app
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: cert-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingressClassName: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - b.sen-pai.live
      secretName: spring-api-tls
  rules:
    - host: b.sen-pai.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-svc
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-api-svc
                port:
                  number: 8080
